--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: splitkb_aurora_corne_left
+    shield: peregrinev1_left
   - board: nice_nano_v2
-    shield: splitkb_aurora_corne_right
+    shield: peregrinev1_right
