Adding config files for Peregrine halves

--- a/config/peregrinev1.conf
+++ b/config/peregrinev1.conf
@@ -1,7 +1,8 @@
 CONFIG_ZMK_USB=y
-CONFIG_ZMK_BLE=n
+CONFIG_ZMK_BLE=y
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_USB=y
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_SPLIT_TRANSPORT_USB=y
 CONFIG_ZMK_HID_REPORT_SIZE=16
 CONFIG_ZMK_HID_STENOGRAPHY_REPORT_PROTOCOL_GEMINI=y
