--- a/build.yaml
+++ b/build.yaml
@@ -18,8 +18,8 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+# - board: nice_nano_v2
+#   shield: peregrinev1_left
 include:
-  - board: nice_nano_v2
-    shield: peregrinev1_left
   - board: nice_nano_v2
     shield: peregrinev1_right
